--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <ol>
-    <li>Introdução aos sistemas operacionais</li><br>
+    <li>Introdução aos sistemas operacionais</li>
      <ol> 
         <li>O que é Sistema Operacional?</li>
         <ul>
